# ChangeLog for perl-core/File-Temp
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Temp/ChangeLog,v 1.40 2009/03/13 20:42:03 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -File-Temp-0.16.ebuild,
  -File-Temp-0.17.ebuild:
  Cleanup

  01 Jan 2009; Raúl Porcel <armin76@gentoo.org> File-Temp-0.21.ebuild:
  Add ~s390

*File-Temp-0.21 (21 Nov 2008)

  21 Nov 2008; Torsten Veller <tove@gentoo.org> +File-Temp-0.21.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> File-Temp-0.20.ebuild:
  alpha/ia64/sparc/x86 stable

*File-Temp-0.20 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +File-Temp-0.20.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> File-Temp-0.18.ebuild:
  Stable for HPPA too.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> File-Temp-0.18.ebuild:
  Stable on mips.

  18 Aug 2007; Tom Gall <tgall@gentoo.org>  File-Temp-0.18.ebuild:
  stable on ppc64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> File-Temp-0.18.ebuild:
  alpha/ia64/x86 stable

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  File-Temp-0.18.ebuild:
  ppc stable

  23 Apr 2007; Timothy Redaelli <drizzt@gentoo.org> File-Temp-0.18.ebuild:
  Add ~x86-fbsd keyword, thanks to GurliGebis for reporting.

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> File-Temp-0.18.ebuild:
  Stable on sparc

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> File-Temp-0.17.ebuild:
  Stable on ppc64

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  File-Temp-0.18.ebuild:
  Marking stable amd64

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> File-Temp-0.17.ebuild:
  Stable on x86, bug #169153.

*File-Temp-0.18 (05 Feb 2007)

  05 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +File-Temp-0.18.ebuild:
  Version bump

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  File-Temp-0.17.ebuild:
  Stable on ppc.
