@@ -1,17 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Temp/File-Temp-0.17.ebuild,v 1.11 2007/04/15 21:04:51 corsair Exp $
-
-inherit perl-module
-
-DESCRIPTION="File::Temp can be used to create and open temporary files in a safe way."
-HOMEPAGE="http://search.cpan.org/~tjenness/${P}/"
-SRC_URI="mirror://cpan/authors/id/T/TJ/TJENNESS/${P}.tar.gz"
-SRC_TEST="do"
-
-LICENSE="|| ( Artistic GPL-2 )"
-SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris"
-IUSE=""
-
-DEPEND="dev-lang/perl"
