@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Temp/File-Temp-0.22.ebuild,v 1.1 2009/06/29 15:00:10 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=TJENNESS
+inherit perl-module
+
+DESCRIPTION="File::Temp can be used to create and open temporary files in a safe way."
+
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
+IUSE=""
+
+SRC_TEST="do"
