@@ -1,10 +1,10 @@
-DIST File-Temp-0.17.tar.gz 33174 RMD160 81300ff6ee0313fd182fe84603709670e4b8f0e5 SHA1 c187a4c4175e970db0993c4e2e550ffdc4316fe2 SHA256 4fdc79e00dd0c171ee01f0d984e3aac9a293fca4f2f5bbeeb41df65973e9ce1f
 DIST File-Temp-0.18.tar.gz 33563 RMD160 5d936127c86e88c0ddc2531bd926ed0b11fa52ab SHA1 8c9bbf5a8d655d994529b96fdbf4a9ea7142f4bd SHA256 a39f43b0a25d23cdd411220e89161a50b6fb38aa3cf4a829e4e6bd32859bf9d9
 DIST File-Temp-0.20.tar.gz 37796 RMD160 358e15d093cf721bf00e8aa771417bd00aa822af SHA1 09ae9aaf00b49d5cb1689d166f7fd7daa7f844cf SHA256 9b3435b5288459f5ef6c2598cb8d504718a66abb0d2743b8fd8fef76ebc9f458
 DIST File-Temp-0.21.tar.gz 38612 RMD160 de57b1046b8cdfde32c5cff6230cca5154e96fd3 SHA1 90d85de2255cbd853934c830bd1ec92fd380e9d2 SHA256 0036da2e28b2c2adce3dfc54dc9bd3bec4da448e5b807d8ef340269e31ed5eb5
-EBUILD File-Temp-0.17.ebuild 594 RMD160 0332d79120fc758348feaf5d0603b8d6474f9c0f SHA1 80da390162345c8ef390d151c9332975f0c3df2d SHA256 369eb4a2784aed3361079bb2fae02133ac1496c726523f2224f7bf6a3189f716
+DIST File-Temp-0.22.tar.gz 38352 RMD160 463f3ca7e25fd6949b8b2da1bc39c31a401a953a SHA1 5535c96e69e5d7f433fa446b5087fe4cab1bc129 SHA256 989f9222497e6c056af3478018316cf634dba946e9a85d4d2b5a09c5351a4785
 EBUILD File-Temp-0.18.ebuild 600 RMD160 9220bf4e60657ba9b4e116c23422804f3b815e28 SHA1 d693e953c67c6ad01d25bb0f34ae73b5d640b759 SHA256 74f5860cd80969f37900510cccb6de8101021a8776a025e23363d8bbe6443db1
 EBUILD File-Temp-0.20.ebuild 604 RMD160 699e5d4c2c31f44fbdbfbfad30918d37579fc56b SHA1 525c3f1c8d5711ad315a7aaa8ac1e8cd018200fe SHA256 0326e26e64308a8dc63db019690f17083a77cc2825f5d118edece2375d588870
 EBUILD File-Temp-0.21.ebuild 517 RMD160 a6e51558a9beb2df5db9aa329a083a6f7cb10609 SHA1 9b0f0231c8b754addfb8f8b3dd5d7bed5051814f SHA256 488790a175882f969f1e9a9e4746822234279f0df7398f6a2d50f3cc69942824
-MISC ChangeLog 5806 RMD160 3845129d9803e9827664c504ac59deeec4f82629 SHA1 ddcd0548d1f57914e6c988c852df6d51e8a16078 SHA256 3de8aede784e7a4898a1ca8ac6ce796062b3a3493a57c9000618e27db6649778
+EBUILD File-Temp-0.22.ebuild 466 RMD160 450bbf42f94434aea100b05ac8aa503deffacae3 SHA1 3e88378d56b233de3cb7497bbdc9e88d72b35836 SHA256 c0be628b52ceac756ead281bd4264ec63ac1038f81ac25e49e2d7e3b8adcf5c6
+MISC ChangeLog 5925 RMD160 5c016011b3ce29838c7d0be30adee59dfeda4793 SHA1 97d34bd98cb6897ddbc8d2c908a9097c876f435d SHA256 1724acea690c954ebab07547c733d88c87f944459f2fe22cb22a1fa078edf05e
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
